exlcude prefix sum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_CUDA_STANDARD 20)
 add_executable(ReCNN
         NNLayer.cuh
         NN.cuh
-        Utility.cuh
+        Utils/Utility.cuh
         main.cu
+        Utils/GPUmax.h
+        Utils/GPUPrefixSum.h
 )
 
 set_target_properties(ReCNN PROPERTIES
