--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,18 @@ add_executable(ReCNN
         Utils/GPUmax.h
         Utils/GPUPrefixSum.h
         Utils/GPUMatrixOp.h
-        Component/TommyDatMatrix.h
+        Component/Matrix.h
         Utils/GPUSoftMax.h
         Utils/Sum.h
         Component/IFlattenable.h
         Component/Kernel3D.h
         Component/EnumActivation.h
+        Component/TommyDatNeuralNet/NeuralNetwork.h
+        Component/Layers/LayerBase.h
+        Component/Layers/ConvolutionLayer.h
+        Component/TommyDatNeuralNet/NeuralInputBase.h
+        Component/TommyDatNeuralNet/NeuralInput.h
+        Component/Layers/MaxPoolingLayer.h
 )
 include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(OpenCV REQUIRED)
