--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ project(ReCNN CUDA)
 set(CMAKE_CUDA_STANDARD 20)
 
 add_executable(ReCNN
-        NNLayer.cuh
-        NN.cuh
         Utils/Utility.cuh
         main.cu
         Utils/GPUmax.h
@@ -14,8 +12,6 @@ add_executable(ReCNN
         Component/Matrix.h
         Utils/GPUSoftMax.h
         Utils/Sum.h
-        Component/IFlattenable.h
-        Component/Kernel3D.h
         Component/EnumActivation.h
         Component/TommyDatNeuralNet/NeuralNetwork.h
         Component/Layers/LayerBase.h
@@ -23,9 +19,13 @@ add_executable(ReCNN
         Component/TommyDatNeuralNet/NeuralInputBase.h
         Component/TommyDatNeuralNet/NeuralInput.h
         Component/Layers/MaxPoolingLayer.h
+        Component/NNlayer.h
 )
+
 include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(OpenCV REQUIRED)
 set_target_properties(ReCNN PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --extended-lambda")
 target_link_libraries(ReCNN ${OpenCV_LIBS})
+file(COPY testdata1.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
