--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-#Dataset
-./Dataset/*
-Dataset/
-#CMake config
-./cmake-build-debug/*
-# CMake cache and generated files
-CMakeCache.txt
-CMakeFiles/
-cmake_install.cmake
-Makefile
-*.cmake
+cmake-build-debug/*
 
